mp7/grade_report_extra_credit.txt
Grading r56111 by enx-cs225autograder committed on Wed Nov 30 00:46:55 CST 2016
Monad Autograder
Testing mp7.1 at 2016-12-01 00:32:15

"It'll work, the stack's just not big enough." ~ Eric Rosenberg

Setting up test environment...
Compiling...
================================================================
unit_tests.cpp:37:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:47:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:59:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:70:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:92:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
5 errors generated.
unit_tests.cpp:37:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:37:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:47:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:59:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:70:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
unit_tests.cpp:92:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
5 errors generated.
unit_tests.cpp:47:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:59:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:37:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:70:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:47:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:92:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:59:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:70:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.
unit_tests.cpp:92:2: error: unknown type name 'DisjointSets'
        DisjointSets disjSets;
        ^
1 error generated.


Oops! Something went wrong inside of me.
Please contact course staff with the following error details, and they'll figure it out:
proxy.cpp:204: No test cases found
Running tests...
================================================================
Could not execute test cases


Total score...
================================================================
TOTAL SCORE: 0

